# rust-api-template

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.sqlx/: query-17686547b8aa0fc01f1afe1907dfec478d1ccdc357d91ce6a0e703ffb32ff80d.json  query-26390904138f8f060f347c572633987b3ba349da690bdac08be68de9a8712ca6.json  query-74ae7d9cddcf2650e4da3af560f7e5655642191b9a1c41dfafa62e4689c90509.json  query-8cede414f7d0f55d75413989010f21ee20e42048ed7029ca8e0deb777f4ff0a1.json  query-9c856d093270e6097ea1da6c0ebdca92668c137ffb5bbac3c56bdb60d1c9fbc1.json  query-a1d2a29230a1cc7d25deb9ac98ad6d1b1e71a0694a1cce94551edbdaea8885c6.json  query-bef20844e8036a9ba5224c9412f0e8aa88c927526973542d404b0842ac0d84ba.json  query-d180d14bf40de8953dded58a9729fb91362180e39bc95d84a04e52d951240e98.json  query-f1a4f403097f0d82d1514345d493aa009694b357217623b3bd38bb91a482589f.json
migrations/: 20240306231050_init.up.sql  20240310164440_users.up.sql  20240410012849_sessions.up.sql
src/: database.rs  main.rs
src/config/: app_state.rs  database.rs  mod.rs  router.rs  signed_cookie_jar.rs
src/handlers/: authorization.rs  user.rs
src/models/: user.rs
src/routes/: healthchecker.rs  mod.rs  user.rs
src/structs/: app_state.rs
src/utils/: auth_body.rs  auth_errors.rs  jwt_claim.rs  mod.rs  record.rs  router.rs  session.rs  use_decoding_keys.rs  use_signed_cookies.rs
